# volumetric-renderer

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
res/shaders/: basic.vert  compile_shaders.bat  volume.frag  volume.vert  volume_frag.spv  volume_vert.spv
src/: CMakeLists.txt  application.cpp  application.h  imgui_context.cpp  imgui_context.h  main.cpp  ui.cpp  ui.h  vulkan_context.cpp  vulkan_context.h
src/data/: csv_file_parser.cpp  csv_file_parser.h  dataset.h  file_parser.cpp  file_parser.h  importer.cpp  importer.h  nrrd_file_parser.cpp  nrrd_file_parser.h
src/rendering/: main_pass.cpp  main_pass.h  offscreen_pass.cpp  offscreen_pass.h  util.cpp  util.h  vulkan_context.cpp  vulkan_context.h
src/scene/: camera.cpp  camera.h  scene.h
src/ui/: error_popup.cpp  error_popup.h  imgui_context.cpp  imgui_context.h  main_window.cpp  main_window.h  raw_importer.cpp  raw_importer.h  ui_context.cpp  ui_context.h
src/ui/components/: attribute_fields.cpp  attribute_fields.h  gradient.cpp  gradient.h  image_rounded.cpp  image_rounded.h  slider.cpp  slider.h
